Traducción al ingles de la vista usuario
Traducción de gran parte de la vista del usuario, alguna vista de las cards y el proceso de compra.
También se añaden tags a las anotaciones de Swagger
