# makinonbikes/storage/api-docs/api-docs.json
@@ -2,7 +2,7 @@
     "openapi": "3.0.0",
     "info": {
         "title": "API de Makinon Bikes",
-        "description": "Esta es la API para gestionar las citas en el taller de Makinon Bikes",
+        "description": "Mediante esta API podemos gestionar las citas en el taller de Makinon Bikes desde la aplicación de Angular",
         "contact": {
             "email": "new.makinonbikes@gmail.com"
         },
@@ -11,6 +11,9 @@
     "paths": {
         "/api/traerDatos": {
             "get": {
+                "tags": [
+                    "Usuarios"
+                ],
                 "summary": "Obtener los datos del usuario autenticado",
                 "operationId": "095767369441c0bc2868b803ce20a4ae",
                 "responses": {
@@ -63,6 +66,9 @@
         },
         "/api/cita_taller": {
             "get": {
+                "tags": [
+                    "Usuarios"
+                ],
                 "summary": "Obtener todas las citas del taller de un cliente",
                 "operationId": "00b8629bd81a58e02262545d1ff68253",
                 "responses": {
@@ -127,6 +133,9 @@
                 ]
             },
             "post": {
+                "tags": [
+                    "Usuarios"
+                ],
                 "summary": "Crea una nueva cita en el taller",
                 "operationId": "52253e3c5ce6108b7e3d29e0f1389a4c",
                 "requestBody": {
@@ -235,6 +244,9 @@
                 ]
             },
             "delete": {
+                "tags": [
+                    "Administrador"
+                ],
                 "summary": "Elimina una cita del taller",
                 "operationId": "e1aabab92df145830694258b95a57161",
                 "requestBody": {
@@ -283,6 +295,9 @@
         },
         "/api/editarCitaUsuario": {
             "post": {
+                "tags": [
+                    "Usuarios"
+                ],
                 "summary": "Editar una cita de la bdd",
                 "operationId": "18130be5519f439a1de3f8f8b4339f70",
                 "requestBody": {
@@ -392,6 +407,9 @@
         },
         "/api/obtenerCitaId/{id_cita_taller}": {
             "get": {
+                "tags": [
+                    "Usuarios"
+                ],
                 "summary": "Obtener una cita por su ID",
                 "operationId": "6bb187eec08e882d29aa0bc359472866",
                 "parameters": [
@@ -480,6 +498,9 @@
         },
         "/api/citaPendiente": {
             "put": {
+                "tags": [
+                    "Administrador"
+                ],
                 "summary": "Edita el estado de varias citas del taller desde el panel del adminitrador de Angular",
                 "operationId": "db2c4638f833e9cf77398b0e5cb608e4",
                 "requestBody": {
@@ -555,6 +576,9 @@
         },
         "/api/calendario": {
             "get": {
+                "tags": [
+                    "Administrador"
+                ],
                 "summary": "Obtiene todas las citas del taller",
                 "operationId": "ac2e27f27db5bdf59bc2b7aca9007a93",
                 "responses": {
@@ -606,6 +630,9 @@
         },
         "/api/subir_imagen": {
             "put": {
+                "tags": [
+                    "Usuarios"
+                ],
                 "summary": "Sube una imagen para una cita del taller",
                 "operationId": "8a365b0b8092cdd0e95caf9b51104826",
                 "requestBody": {
